@@ -11,15 +11,12 @@ import static org.junit.Assert.assertThat;
 public class ConvertMatrix2ListTest {
     @Test
     public void when2on2ArrayThenList4() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3},
                 {4, 5, 6}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6
-        );
-        List<Integer> result = list.toList(input);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
+        List<Integer> result = new ConvertMatrix2List().toList(input);
         assertThat(result, is(expect));
     }
 }
